Opened 10 years ago
Closed 9 years ago
#5925 closed defect (fixed)
Trying to transcode a mxf prores video file (spanned) to mov x264
| Reported by: | Eric Pardee | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | prores mxf |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description (last modified by )
Summary of the bug:
With the Canon EOS C300, it spans clips. In our case, these clips are being ingested into Avid Media Composer and the video is encoded to ProRes. Generally we transcode each part of the spanned clip and then concatenate the clips together to form one clip. However, with ProRes in particular, the first clip of the spanned clips will transcode but the remaining clips will not.
I've tried explicitly specifying the format, the video codec, ffmbc, but I keep encountering: Output file #0 does not contain any stream
How to reproduce:
/home/pw/bin/ffmpeg -c:v:0 prores -r 23.98 -i /mnt/loadingdock_tc1/.A00001V01.D435447D_580FF66A060a2b340101010101010f0013000000580ff66a8f4e0162060e2b347f7f2a80.mxf -b:v 800k -maxrate 800k -s 320x240 -vcodec copy -y -threads 0 -report '/tmp/media/BZ0_MEDIA/LOCAL/BZ01020A01/2BZ01020A01-1.mov'
ffmpeg started on 2016-11-02 at 16:33:51
Report written to "ffmpeg-20161102-163351.log"
ffmpeg version N-82119-g1342339 Copyright (c) 2000-2016 the FFmpeg developers
built with gcc 4.8 (Ubuntu 4.8.4-2ubuntu1~14.04.3)
configuration: --prefix=/home/pw/ffmpeg_build --pkg-config-flags=--static --extra-cflags=-I/home/pw/ffmpeg_build/include --extra-ldflags=-L/home/pw/ffmpeg_build/lib --bindir=/home/pw/bin --enable-gpl --enable-libass --enable-libfdk-aac --enable-libfreetype --enable-libmp3lame --enable-libopus --enable-libtheora --enable-libvorbis --enable-libvpx --enable-libx264 --enable-nonfree
libavutil 55. 33.100 / 55. 33.100
libavcodec 57. 63.103 / 57. 63.103
libavformat 57. 55.100 / 57. 55.100
libavdevice 57. 0.103 / 57. 0.103
libavfilter 6. 64.100 / 6. 64.100
libswscale 4. 1.100 / 4. 1.100
libswresample 2. 2.100 / 2. 2.100
libpostproc 54. 0.100 / 54. 0.100
[mxf @ 0x39c8fe0] invalid KAGSize 2097152 - guessing 1
[mxf @ 0x39c8fe0] material track 2: has 11 components
[mxf @ 0x39c8fe0] material track 3: has 11 components
[mxf @ 0x39c8fe0] material track 4: has 11 components
[mxf @ 0x39c8fe0] x >= nb_ptses - IndexEntryCount 7585 < IndexDuration 7584?
Input #0, mxf, from '/mnt/loadingdock_tc1/.A00001V01.D435447D_580FF66A060a2b340101010101010f0013000000580ff66a8f4e0162060e2b347f7f2a80.mxf':
Metadata:
project_name : 2398_BALLERS
uid : ff420b2d-b7fa-e04f-a346-6e7a538f184a
generation_uid : b6bcfcab-70ff-7331-d7dc-925e69de11d2
application_platform: AAFSDK (MacOS X)
modification_date: 2016-10-26T00:22:40.000000Z
product_uid : acfbf03a-4f42-a231-d0b7-c06ecd3d4ad7
product_version : Unknown version
product_name : Avid Media Composer 7.0.4.3735
company_name : Avid Technology, Inc.
material_package_umid: 0x060A2B340101010101010F0013000000580FF66A8F4E0162060E2B347F7F2A80
material_package_name: A00001.new.01
comment__videobasename: CANON XF MPEG-2 422
comment_CompanyName: CANON
comment_Product : EOS C300
comment_lastModifiedDate: 2012-05-20 19:14:34
comment_TapeID : BZ01020A01
Duration: N/A, bitrate: N/A
Stream #0:0: Data: none
Metadata:
file_package_umid: 0x060A2B340101010101010F0013000000580FF66A8F4F0162060E2B347F7F2A80
track_name : V1
data_type : video
Stream #0:1: Data: none
Metadata:
file_package_umid: 0x060A2B340101010101010F0013000000580FF66A8F830162060E2B347F7F2A80
track_name : A1
data_type : audio
Stream #0:2: Data: none
Metadata:
file_package_umid: 0x060A2B340101010101010F0013000000580FF66A8F8E0162060E2B347F7F2A80
track_name : A2
data_type : audio
Output #0, mov, to '/tmp/media/BZ0_MEDIA/LOCAL/BZ01020A01/2BZ01020A01-1.mov':
I have the full log/ouput of working first clip in spanned clips and the non-working clip.
Attachments (2)
Change History (11)
by , 10 years ago
| Attachment: | output-good.txt added |
|---|
comment:2 by , 10 years ago
Here is an example non-spanned prores video clip that will transcode:
https://s3-us-west-2.amazonaws.com/mxf.pilotware.com/work-non-span.zip
Here is an example of a spanned prores video clips that will not transcode:
https://s3-us-west-2.amazonaws.com/mxf.pilotware.com/non-work-spanned.zip
follow-up: 5 comment:4 by , 10 years ago
Hi, thanks for response. Yes, there are audio tracks but not applicable to my issue in this case (op-atom mxf files).
Here are commands you can use (unzip, cut & paste):
Non-spanned clip (works):
ffmpeg -c:v:0 prores -r 23.98 -i A00006V01.D43559BB_58100BA9.mxf -b:v 800k -maxrate 800k -s 320x240 -vcodec copy -y -threads 0 -report A00006V01-part2.mov
Spanned clip part1 (works):
ffmpeg -c:v:0 prores -r 23.98 -i A00006V01.D43559B9_58100BA7.mxf -b:v 800k -maxrate 800k -s 320x240 -vcodec copy -y -threads 0 -report A00006V01-part1.mov
Spanned clip part2 (fails with Output file #0 does not contain any stream):
ffmpeg -c:v:0 prores -r 23.98 -i A00005V01.D43559B4_58100BA4.mxf -b:v 800k -maxrate 800k -s 320x240 -vcodec copy -y -threads 0 -report A00005V01.mov
For some reason, even if you explicitly specify the video as prores, the 2nd part of a spanned clip will not get processed.
Thanks again
Eric
comment:5 by , 10 years ago
Replying to dr_pardee:
Hi, thanks for response. Yes, there are audio tracks but not applicable to my issue in this case (op-atom mxf files).
Here are commands you can use (unzip, cut & paste):
Sorry, I don't understand: There is audio in the files and with the provided command lines, you can read it?
comment:6 by , 10 years ago
There is no audio in the files, these are video prores mxf files.
Stream #0:0 is Video: prores (apch / 0x68637061), yuv422p10le(progressive), 1920x1080 [SAR 1:1 DAR 16:9]
comment:7 by , 10 years ago
I apologize, I mixed up the last commands when I was posting.
Corrected:
Non-spanned clip (works):
ffmpeg -c:v:0 prores -r 23.98 -i A00005V01.D43559B4_58100BA4.mxf -b:v 800k -maxrate 800k -s 320x240 -vcodec copy -y -threads 0 -report A00005V01.mov
Spanned clip part1 (works):
ffmpeg -c:v:0 prores -r 23.98 -i A00006V01.D43559B9_58100BA7.mxf -b:v 800k -maxrate 800k -s 320x240 -vcodec copy -y -threads 0 -report A00006V01-part1.mov
Spanned clip part2 (fails with Output file #0 does not contain any stream):
ffmpeg -c:v:0 prores -r 23.98 -i A00006V01.D43559BB_58100BA9.mxf -b:v 800k -maxrate 800k -s 320x240 -vcodec copy -y -threads 0 -report A00006V01-part2.mov
The result of the first clip from ffmpeg is:
https://drive.google.com/open?id=0B2zHnxqTQVYLUzdwY1hzU0EyN1k
Since the second clip is failing on the second part of the clip, here is the full clip exported via Avid Media Composer:
https://drive.google.com/open?id=0B2zHnxqTQVYLaHhiMk1UYjFuSWc
Again, the source video files:
Here is an example non-spanned prores video clip that will transcode:
https://s3-us-west-2.amazonaws.com/mxf.pilotware.com/work-non-span.zip
Here is an example of a spanned prores video clips that will not transcode:
https://s3-us-west-2.amazonaws.com/mxf.pilotware.com/non-work-spanned.zip
comment:9 by , 9 years ago
| Component: | undetermined → avformat |
|---|---|
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |
| Version: | unspecified → git-master |
Should be fixed in 4590d073ccdc7c3ce0384d5b1fba56b3f6673535, thank you for the sample!



First clip in spanned clips that does transcode