lavf/mxfdec: Search all components of material track for source package.

Fixes ticket #5925.

Reviewed-by: Marton